exports[`test orderHint is not respected across groups, and picked order persists 1`] = `
Array [
  Array [
    "mercury",
    "a",
  ],
  Array [
    "mercury",
    "a",
  ],
  Array [
    "a",
    "mercury",
  ],
  Array [
    "mercury",
    "a",
  ],
  Array [
    "a",
    "mercury",
  ],
  Array [
    "a",
    "mercury",
  ],
  Array [
    "a",
    "mercury",
  ],
  Array [
    "a",
    "mercury",
  ],
  Array [
    "mercury",
    "a",
  ],
  Array [
    "mercury",
    "a",
  ],
]
`;

exports[`test orderHint is respected within groups but not across groups 1`] = `
Array [
  Array [
    "zero",
    "one",
    "two",
    "mercury",
    "venus",
    "a",
    "b",
  ],
  Array [
    "mercury",
    "venus",
    "zero",
    "one",
    "two",
    "a",
    "b",
  ],
  Array [
    "mercury",
    "venus",
    "a",
    "b",
    "zero",
    "one",
    "two",
  ],
  Array [
    "mercury",
    "venus",
    "zero",
    "one",
    "two",
    "a",
    "b",
  ],
  Array [
    "a",
    "b",
    "zero",
    "one",
    "two",
    "mercury",
    "venus",
  ],
  Array [
    "a",
    "b",
    "mercury",
    "venus",
    "zero",
    "one",
    "two",
  ],
  Array [
    "a",
    "b",
    "zero",
    "one",
    "two",
    "mercury",
    "venus",
  ],
  Array [
    "mercury",
    "venus",
    "a",
    "b",
    "zero",
    "one",
    "two",
  ],
  Array [
    "zero",
    "one",
    "two",
    "a",
    "b",
    "mercury",
    "venus",
  ],
  Array [
    "zero",
    "one",
    "two",
    "mercury",
    "venus",
    "a",
    "b",
  ],
]
`;
